/******************************************************************************
 *                                                                            *
 *                    Copyright 2016 Subterranean Security                    *
 *                                                                            *
 *  Licensed under the Apache License, Version 2.0 (the "License");           *
 *  you may not use this file except in compliance with the License.          *
 *  You may obtain a copy of the License at                                   *
 *                                                                            *
 *      http://www.apache.org/licenses/LICENSE-2.0                            *
 *                                                                            *
 *  Unless required by applicable law or agreed to in writing, software       *
 *  distributed under the License is distributed on an "AS IS" BASIS,         *
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  *
 *  See the License for the specific language governing permissions and       *
 *  limitations under the License.                                            *
 *                                                                            *
 *****************************************************************************/
syntax = "proto2";

package core.net.sequences;

option java_package = "com.subterranean_security.crimson.proto.core.net.sequences";

import "com/subterranean_security/crimson/core/Misc.proto";

enum StateType {
	FUNCTIONING_ON = 0;
	FUNCTIONING_OFF = 1;
	SHUTDOWN = 2;
	RESTART = 3;
	STANDBY = 4;
	HIBERNATE = 5;
	UNINSTALL = 6;
	KILL = 7;
	RESTART_PROCESS = 8;
	
}

message RQ_ChangeServerState {
	required StateType new_state = 1;
}

message RS_ChangeServerState {
	required Outcome outcome = 1;
}

message RQ_ChangeClientState {
	required StateType new_state = 1;
}

message RS_ChangeClientState {
	required Outcome outcome = 1;
}